# aidotgrids

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: buildingelectricity.md  contributions.md  opfdata.md  powergraph.md  solarcube.md  windfarm.md
src/aidotgrids/: buildingelectricity.py  load.py  windfarm.py
tests/: test_opfdata.py
