[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidotgrids"
version = "0.0.1"
description = "Datasets, Models and Methods for Power System Foundation Models"
readme = "README.md"
authors = [
  { name = "Arsam Aryandoust", email = "arsam@mit.edu" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = ["Artificial Intelligence", "Machine Learning", "Power Systems"]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
  "h5py>=3.0.0",
  "torch>=2.0.0",
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/AI-grids/aidotgrids"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aidotgrids*"]